tests/compile_fail/timeout/extra_args.stderr
error: expected a single duration expression
 --> tests/compile_fail/timeout/extra_args.rs:3:1
  |
3 | #[timeout(1, 2)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `timeout` (in Nightly builds, run with -Z macro-backtrace for more info)
